--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,31 @@
     </div>
   </div>
 
+  <div class="quotes-container" id="section-4">
+    <div class="q-item one">
+      <p class="q-text"><span class="mark">"</span> The key is not to prioritize what is on schedule, but to schedule your priorities.<span class="mark">"</span></p>
+      <p class="q-name">- Stephen R. Covey</p>
+    </div>
+    <div class="q-item two">
+      <p class="q-text"><span class="mark">"</span> Success is not about getting everything done, but getting the right things done at the right time.<span class="mark">"</span></p>
+      <p class="q-name">- Laura Stack</p>
+    </div>
+    <div class="q-item three">
+      <p class="q-text"><span class="mark">"</span> Let our advance worrying become advance thinking and planning.<span class="mark">"</span></p>
+      <p class="q-name">- Winston Churchill</p>
+    </div>
+  </div>
+  <div class="footer">
+    <a href="https://github.com/ali5917" target="_blank">Ali Kashif</a>
+    <p>-</p>
+    <a href="https://cs50.harvard.edu/x/2024/" target="_blank">CS50x</a>
+    <p>-</p>
+    <a href="https://github.com/ismailsilat7" target="_blank">Ismail Silat</a>
+  </div>
+
+  <button id="scroll-btn" title="Scroll to top">
+    <i class="ri-arrow-up-line"></i>
+  </button>
 
 
 
