add hamburger layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,10 @@
       <img src="{{ url_for('static', filename='images/logo-b.png') }}" alt="logo">
       <a href="./index.html" class="logo-title">DueTrack</a>
     </div>
-    <div class="menus">
+    <button class="hamburger" id="hamburger">
+      <i class="ri-menu-line"></i>
+    </button>
+    <div class="menus" id="menus">
       <a href="https://github.com/ali5917/assignment-tracker" class="git" target="_blank" title="Github Repository">
         <i class="ri-github-line"></i>
       </a>
