--- a/static/styles.css
+++ b/static/styles.css
@@ -78,12 +78,12 @@
   outline: none;
 }
 
-.about, .sign-in {
+.feature, .sign-in {
   width: 80px;
   text-align: center;
 }
 
-.about:hover, .sign-in:hover {
+.feature:hover, .sign-in:hover {
   text-shadow: 0 0 2px rgba(255, 255, 255, 0.6);
   font-weight: bold;
 }
@@ -507,4 +507,9 @@
     font-size: 15px;
     min-height: 20%;
   }
+}
+
+/* smooth scroll */
+html {
+    scroll-behavior: smooth;
 }
