--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
           <a href="https://github.com/ismailsilat7" class="ismail" target="_blank">Ismail Silat</a>
         </div>
       </div>
-      <a href="#" class="about">About</a>
+      <a href="#features" class="feature about">Features</a>
       <a href="#" class="sign-in">Sign in</a>
       <div class="start-box">
         <a href="#" class="start">Start for free</a>
@@ -56,7 +56,7 @@
   </div>
 
 
-  <div class="features-container" id="section-2">
+  <div class="features-container" id="features">
     <video src="{{ url_for('static', filename='videos/animation1.mp4') }}" autoplay loop muted></video>
     <div class="vertical-line"></div>
     <div class="features-content">
