--- a/static/styles.css
+++ b/static/styles.css
@@ -83,6 +83,10 @@
   text-align: center;
 }
 
+.feature {
+  width: 100px;
+}
+
 .feature:hover, .sign-in:hover {
   text-shadow: 0 0 2px rgba(255, 255, 255, 0.6);
   font-weight: bold;
@@ -512,4 +516,31 @@
 /* smooth scroll */
 html {
     scroll-behavior: smooth;
+}
+
+#preloader {
+  background-color: black;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#preloader img {
+  width: 400px;
+  height: 300px;
+}
+
+.preloader-text {
+  font-family: 'Montserrat';
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+#index-page {
+  display: none;
 }
