--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -26,8 +26,22 @@
           <a href="./" class="logo-title">DueTrack</a>
         </div>
       </div>
+      
+      <div class="main-container">
+        <div class="up-form">
+          <div class="up-major">
+            <h2>Create <span style="display: block">new account</span></h2>
+            <div class="up-inputs">
 
-
+            </div>
+            <div class="up-submit">
+              <a href="#">Already have an account?</a>
+              <a href="#">Sign up</a>
+            </div>
+          </div>
+        </div>
+        <img src="" alt="">
+      </div>
 
 
 
