--- a/static/styles-2.css
+++ b/static/styles-2.css
@@ -1,8 +1,10 @@
+/* Default styles */
+
 *{
   font-family: "Montserrat", sans-serif;
   padding: 0;
   margin: 0;
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
   transition: all 0.3s ease;
 }
@@ -55,3 +57,14 @@
   height: 50px;
   width: auto;
 }
+
+/* new styles */
+.main-container {
+  width: 100%;
+  height: 100vh;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
