--- a/static/styles.css
+++ b/static/styles.css
@@ -7,6 +7,10 @@
   transition: all 0.3s ease;
 }
 
+body {
+  background-color: black;
+}
+
 ::-webkit-scrollbar {
   width: 1vw;
 }
@@ -81,6 +85,10 @@
 .feature, .sign-in {
   width: 80px;
   text-align: center;
+}
+
+.feature {
+  width: 100px;
 }
 
 .feature:hover, .sign-in:hover {
@@ -319,7 +327,6 @@
   justify-content: center;
   align-items: flex-start;
   gap:5px;
-  width: 100%;
   height: 100%;
 }
 
@@ -348,7 +355,7 @@
 }
 
 .q-item {
-  width: 600px;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
 }
@@ -446,8 +453,22 @@
     font-size: 18px;
     min-height: 20%;
   }
+  .ft p {
+    font-size: 16px;
+  }
+  .ft i {
+    font-size: 25px;
+  }
+  .vertical-line {
+    display: none;
+  }
+  .q-text {
+    font-size: 25px;
+  }
+  .q-name {
+    font-size: 18px;
+  }
 }
-
 
 @media screen and (max-width: 900px) {
   .main-container button {
@@ -478,6 +499,38 @@
     font-size: 90px;
     line-height: 100%;
   }
+  .features-container video {
+    width: 380px;
+    height: 230px;
+  }
+  .test-head {
+    font-size: 60px;
+  }
+  .test-text {
+    font-size: 14px;
+  }
+  .test-details-item p {
+    font-size: 18px;
+  }
+  .test-details-container img {
+    width: 50px;
+  }
+  .test-details-item .prof {
+    font-size: 10px;
+  }
+  .q-text {
+    font-size: 28px;
+  }
+  .q-name {
+    font-size: 18px;
+  }
+  .q-item.one, .q-item.two, .q-item.three {
+    align-self: center;
+  }
+  .quotes-container {
+    gap: 3em;
+  }
+  
 }
 
 @media (max-width: 650px) {
@@ -507,7 +560,46 @@
     font-size: 15px;
     min-height: 20%;
   }
+  .features-container video {
+    display: none;
+  }
+  .features-container {
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .ft p {
+    font-size: 30px;
+  }
+  .ft i {
+    font-size: 40px;
+  }
+  .test-content {
+    flex-direction: column;
+  }
+  .horizontal-line {
+    display: none;
+  }
+  .test-head {
+    margin-bottom: 40px;
+  }
+  .test-content {
+    gap: 1.5em;
+  }
+  .q-text {
+    font-size: 18px;
+  }
+  .q-name {
+    font-size: 14px;
+  }
+  .q-item {
+    min-width: 400px;
+  }
+  .footer {
+    font-size: 16px;
+  }
 }
+
+
 
 /* smooth scroll */
 html {
