--- a/static/styles-2.css
+++ b/static/styles-2.css
@@ -9,6 +9,10 @@
   transition: all 0.3s ease;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 ::-webkit-scrollbar {
   width: 1vw;
 }
@@ -34,7 +38,6 @@
   left: 0;
   right: 0;
   z-index: 1000;
-  flex-wrap: wrap;
 }
 
 .logo {
@@ -58,13 +61,150 @@
   width: auto;
 }
 
-/* new styles */
+/* new styles*/
 .main-container {
+  padding: 120px  0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 250px;
 }
 
+.up-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+}
+
+.up-img {
+  width: 480px;
+  height: 370px;
+}
+
+.up-form h2 {
+  font-size: 65px;
+  line-height: 80%;
+  letter-spacing: -3;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border-bottom: solid 2px rgb(148, 148, 148);
+}
+
+.input-container:focus-within{
+  border-bottom: solid 2px black;
+}
+
+.input-container i {
+  font-size: 22px;
+}
+
+.up-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+input {
+  padding: 5px;
+  font-size: 18px;
+  width: 100%;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+input:disabled {
+  cursor: not-allowed;
+}
+
+.up-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.up-submit a {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.up-submit button {
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 15px 50px;
+  font-size: 18px;
+  border-radius: 30px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+.up-submit {
+  margin-top: 40px;
+}
+
+/* sign-in new styles */
+.in-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 40px;
+}
+
+.in-img {
+  width: 380px;
+  height: 480px;
+}
+.in-form h2 {
+  font-size: 65px;
+  line-height: 80%;
+  letter-spacing: -3;
+}
+
+.in-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.in-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.in-submit a {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.in-submit button {
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 15px 55px;
+  font-size: 20px;
+  border-radius: 30px;
+  cursor: pointer;
+  border: solid 2px black;
+  transform: all 0.3s ease;
+}
+
+.in-submit {
+  margin-top: 30px;
+}
+
+button:hover {
+  color: black;
+  background-color: white;
+}
