--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -19,13 +19,76 @@
   
   </head>
   <body>
-    <div id="signup-page">
+    <div id="signin-page">
       <div class="nav">
         <div class="logo">
           <img src="{{ url_for('static', filename='images/logo-b.png') }}" alt="logo">
           <a href="./" class="logo-title">DueTrack</a>
         </div>
       </div>
+
+      <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DueTrack - Sign in</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles-2.css') }}">
+  
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  
+    <!-- REMIXICONS -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+  
+    <!-- Google Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+  
+  </head>
+  <body>
+    <div id="signin-page">
+      <div class="nav">
+        <div class="logo">
+          <img src="{{ url_for('static', filename='images/logo-b.png') }}" alt="logo">
+          <a href="./" class="logo-title">DueTrack</a>
+        </div>
+      </div>
+      
+      <div class="main-container">
+          <img class="in-img" src="{{ url_for('static', filename='images/in-img.gif') }}" alt="">
+          <div class="in-form">
+            <h2>Sign in</h2>
+            <form action="/sign-in" method="post">
+              <div class="in-inputs">
+                <div class="input-container">
+                  <i class="ri-mail-fill"></i>
+                  <input type="text" name="name" placeholder="Email" required>
+                </div>
+                <div class="input-container">
+                  <i class="ri-lock-2-line"></i>
+                  <input type="password" name="pwd" placeholder="Password" id="pwd" required>
+                  <i class="ri-eye-close-line" style="font-size: 26px;cursor: pointer;" id="toggle-one"></i>
+                </div>
+              </div>
+              <p style="text-align: right; font-size: 18px; margin-top: 15px; font-weight: 500;">Forgot password?</p>
+              <div class="in-submit">
+                <a href="{{ url_for('sign_up') }}">New here? <span style="display: block;">Create Account!</span></a>
+                <button type="submit">Sign in</button>
+              </div>
+            </form>
+          </div>
+      </div>
+
+
+
+    </div>
+    <!-- JavaScript file -->
+    <script src="{{ url_for('static', filename='script-2.js') }}"></script>
+  </body>
+</html>
+
 
 
 
