Fix link error in sign-in.html

--- a/static/styles-2.css
+++ b/static/styles-2.css
@@ -208,3 +208,12 @@ button:hover {
   color: black;
   background-color: white;
 }
+
+.change-pwd {
+  font-size: 18px;
+  font-weight: 500;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
