--- a/templates/sign-in.html
+++ b/templates/sign-in.html
@@ -72,7 +72,7 @@
                   <i class="ri-eye-close-line" style="font-size: 26px;cursor: pointer;" id="toggle-one"></i>
                 </div>
               </div>
-              <p style="text-align: right; font-size: 18px; margin-top: 15px; font-weight: 500;">Forgot password?</p>
+              <div class="change-pwd"><a href="">Forgot password?</a></div>
               <div class="in-submit">
                 <a href="{{ url_for('sign_up') }}">New here? <span style="display: block;">Create Account!</span></a>
                 <button type="submit">Sign in</button>
