--- a/static/styles-2.css
+++ b/static/styles-2.css
@@ -217,3 +217,75 @@ button:hover {
   margin-top: 20px;
 }
 
+.change-form {
+  width: 100%;
+  height: 100vh;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.change-form h2 {
+  font-size: 80px;
+  letter-spacing: -3;
+  line-height: 80%;
+}
+
+.change-inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 550px;
+
+}
+
+.change-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.change-submit button {
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 20px 70px;
+  font-size: 25px;
+  border-radius: 40px;
+  cursor: pointer;
+  border: 2px solid black;
+}
+
+.change-submit button:hover {
+  color: black;
+  background-color: white;
+}
+
+.change-submit {
+  margin-top: 40px;
+}
+
+.change-inputs input {
+  padding: 5px;
+  font-size: 26px;
+  width: 100%;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.change-inputs .input-container i {
+  font-size: 24px;
+}
+
+.change-inputs .input-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding-bottom: 5px;
+  border-bottom: solid 2px rgb(148, 148, 148);
+}
