--- a/templates/change-password.html
+++ b/templates/change-password.html
@@ -26,7 +26,34 @@
           <a href="./" class="logo-title">DueTrack</a>
         </div>
       </div>
-
+      <div class="change-form">
+        <h2>Authentication</span></h2>
+        <form action="/change-password" method="post">
+          <div class="change-inputs">
+            <div class="input-container">
+              <i class="ri-mail-fill"></i>
+              <input type="text" name="name" placeholder="Email" required>
+            </div>
+            <div class="input-container">
+              <i class="ri-emotion-happy-line"></i>
+              <input type="text" name="nickname" placeholder="Nickname" required>
+            </div>
+            <div class="input-container">
+              <i class="ri-lock-2-line"></i>
+              <input type="password" name="pwd" placeholder="Password" id="pwd" required>
+              <i class="ri-eye-close-line" style="font-size: 26px;cursor: pointer;" id="toggle-one"></i>
+            </div>
+            <div class="input-container">
+              <i class="ri-lock-2-fill"></i>
+              <input type="password" name="confirm-pwd" placeholder="Confirm Password" id="confirm-pwd" required disabled>
+              <i class="ri-eye-close-line" style="font-size: 26px; cursor: pointer;" id="toggle-two"></i>
+            </div>
+          </div>
+          <div class="change-submit">
+            <button type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
 
 
 
@@ -40,6 +67,6 @@
 
     </div>
     <!-- JavaScript file -->
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('static', filename='script-2.js') }}"></script>
   </body>
 </html>
