--- a/templates/change-password.html
+++ b/templates/change-password.html
@@ -40,12 +40,12 @@
             </div>
             <div class="input-container">
               <i class="ri-lock-2-line"></i>
-              <input type="password" name="pwd" placeholder="Password" id="pwd" required>
+              <input type="password" name="new-pwd" placeholder="New Password" id="pwd" required>
               <i class="ri-eye-close-line" style="font-size: 26px;cursor: pointer;" id="toggle-one"></i>
             </div>
             <div class="input-container">
               <i class="ri-lock-2-fill"></i>
-              <input type="password" name="confirm-pwd" placeholder="Confirm Password" id="confirm-pwd" required disabled>
+              <input type="password" name="confirm-new-pwd" placeholder="Confirm New Password" id="confirm-pwd" required disabled>
               <i class="ri-eye-close-line" style="font-size: 26px; cursor: pointer;" id="toggle-two"></i>
             </div>
           </div>
